Showing all data on movie details screen

--- a/movies/screens/MoviesDetailsView/MovieDetailsView.strings
+++ b/movies/screens/MoviesDetailsView/MovieDetailsView.strings
@@ -8,3 +8,14 @@
 
 "pageTitle" = "Details";
 "loadingMessage" = "Loading movie";
+
+"releaseDate" = "Release date";
+"revenue" = "Revenue";
+"budget" = "Budget";
+"runtime" = "Runtime";
+
+"generes" = "Generes";
+"productionCompanies" = "Production companies";
+"productionCountries" = "Production countries";
+
+"openInIMDB" = "Open in IMDB";
